<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="poster">poster</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_genres">Movie Genres</string>
    <string name="movie_date">Movie Date</string>
    <string name="more_info">More Info</string>
    <string name="movie_rating">Rating: %1$s</string>
    <string name="overview">Overview</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="language_setting">Language Setting</string>
    <string name="detail_movie">Detail Movie</string>
    <string-array name="data_movie_title">
        <item>A Star Is Born</item>
        <item>Alita: Battle Angel</item>
        <item>Aquaman</item>
        <item>Bohemian Rhapsody</item>
        <item>Cold Pursuit</item>
        <item>Creed II</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Glass</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Avengers: Infinity War</item>
        <item>Mary Queen of Scots</item>
        <item>Master Z: Ip Man Legacy</item>
        <item>Mortal Engines</item>
        <item>Overlord</item>
        <item>Ralph Breaks the Internet</item>
        <item>Robin Hood</item>
        <item>Serenity</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>T-34</item>
    </string-array>
    <string-array name="data_tvshow_title">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey"'"s Anatomy</item>
        <item>Hanna</item>
        <item>Marvel"'"s Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>Riverdale</item>
        <item>Shameless</item>
        <item>Supergirl</item>
        <item>Supernatural</item>
        <item>The Simpsons</item>
        <item>The Umbrella Academy</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="data_movie_date">
        <item>October 3, 2018</item>
        <item>January 31, 2019</item>
        <item>December 7, 2018</item>
        <item>October 24, 2018</item>
        <item>February 7, 2019</item>
        <item>November 21, 2018</item>
        <item>November 14, 2018</item>
        <item>January 16, 2019</item>
        <item>January 3, 2019</item>
        <item>April 25, 2018</item>
        <item>December 7, 2018</item>
        <item>December 20, 2018</item>
        <item>November 27, 2018</item>
        <item>November 1, 2018</item>
        <item>November 20, 2018</item>
        <item>November 20, 2018</item>
        <item>January 24, 2019</item>
        <item>December 6, 2018</item>
        <item>December 27, 2018</item>
    </string-array>
    <string-array name="data_tvshow_date">
        <item>October 10, 2012</item>
        <item>February 15, 2019</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>April 17, 2011</item>
        <item>September 22, 2014</item>
        <item>March 27, 2005</item>
        <item>March 28, 2019</item>
        <item>March 17, 2017</item>
        <item>February 15, 2007</item>
        <item>September 23, 2003</item>
        <item>January 26, 2017</item>
        <item>January 9, 2011</item>
        <item>October 26, 2015</item>
        <item>September 13, 2005</item>
        <item>December 17, 1989</item>
        <item>February 15, 2019</item>
        <item>October 31, 2010</item>
    </string-array>
    <string-array name="data_movie_genres">
        <item>Drama, Romance, Music</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Music</item>
        <item>Action, Drama, Thriller, Crime</item>
        <item>Drama</item>
        <item>Adventure</item>
        <item>Thriller, Mystery, Drama</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Drama, History</item>
        <item>Action</item>
        <item>Adventure, Fantasy</item>
        <item>Horror, War, Science Fiction</item>
        <item>Family, Animation, Comedy, Adventure</item>
        <item>Adventure, Action, Thriller</item>
        <item>Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>War, Drama, Adventure, Action</item>
    </string-array>
    <string-array name="data_tvshow_genres">
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>Science Fiction, Fantasy, Action, Adventure</item>
        <item>Comedy, Science Fiction, Fantasy, Animation, Action, Adventure</item>
        <item>Action, Adventure, Animation, Comedy, Science Fiction</item>
        <item>Animation, Comedy</item>
        <item>Drama, Science Fiction, Fantasy</item>
        <item>Science Fiction, Fantasy, Drama, Action, Adventure</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Drama</item>
        <item>Action, Adventure, Drama</item>
        <item>Action, Adventure, Crime, Drama, Science Fiction, Fantasy</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action, Adventure, Crime, Drama</item>
        <item>Drama, Mystery</item>
        <item>Drama, Comedy</item>
        <item>Action, Adventure, Drama, Science Fiction</item>
        <item>Drama, Mystery, Science Fiction, Fantasy</item>
        <item>Animation, Comedy</item>
        <item>Action, Adventure, Science Fiction, Fantasy</item>
        <item>Action, Adventure, Drama, Science Fiction, Fantasy</item>
    </string-array>
    <string-array name="data_movie_rating">
        <item>7.5</item>
        <item>6.7</item>
        <item>6.8</item>
        <item>8.1</item>
        <item>5.3</item>
        <item>6.7</item>
        <item>6.9</item>
        <item>6.5</item>
        <item>7.6</item>
        <item>8.3</item>
        <item>6.6</item>
        <item>5.2</item>
        <item>6.0</item>
        <item>6.6</item>
        <item>7.2</item>
        <item>5.8</item>
        <item>5.1</item>
        <item>8.4</item>
        <item>4.9</item>
    </string-array>
    <string-array name="data_tvshow_rating">
        <item>5.8</item>
        <item>6.1</item>
        <item>7.2</item>
        <item>6.4</item>
        <item>6.5</item>
        <item>6.7</item>
        <item>8.1</item>
        <item>6.8</item>
        <item>6.3</item>
        <item>6.4</item>
        <item>6.1</item>
        <item>7.5</item>
        <item>6.7</item>
        <item>6.9</item>
        <item>7.8</item>
        <item>5.6</item>
        <item>7.3</item>
        <item>7.1</item>
        <item>7.7</item>
        <item>7.3</item>
    </string-array>
</resources>