<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:id="@+id/img_poster"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/margin_small_size"
            android:layout_marginStart="@dimen/margin_small_size"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_small_size"
            android:contentDescription="@string/poster"
            android:layout_marginBottom="@dimen/margin_small_size"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="fitXY" android:background="@android:color/darker_gray"/>

    <TextView
            android:text="@string/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_small_size"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="@dimen/margin_normal_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/margin_normal_size"
            android:textColor="#000000"/>

    <TextView
            android:text="@string/movie_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_genres"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="@dimen/margin_normal_size"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/margin_normal_size"
            android:maxLines="4"
            android:ellipsize="end"
            android:textSize="13sp"
            android:layout_marginBottom="@dimen/margin_normal_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="@dimen/margin_small_size"/>

    <TextView
            android:text="@string/movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" android:textStyle="bold"/>

    <Button
            android:text="@string/more_info"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/btn_detail"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:layout_marginBottom="@dimen/margin_small_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_normal_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres"
            app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/btn_detail_hover" android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"/>

    <TextView
            android:text="@string/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            android:layout_marginTop="@dimen/margin_small_size"
            android:textSize="13sp"/>

</android.support.constraint.ConstraintLayout>